--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -168,6 +168,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 #site-menu {background: #2c3e50;padding: 0;}
 .glyphicon + .label {margin: -15px 0 0 12px;position: absolute;}
 
+#content {padding: 55px 0 0}
 #content.form {padding-top: 15%;}
 #content.form > div {margin: auto}
 #content.form .directions {font-size: 16px; margin-top: 90px; text-align: center}
@@ -217,6 +218,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 }
 @media (min-width: 768px) {
     .modal .actions {margin-top: 2em}
+    #content {padding: 80px 15px 0; min-height: 450px}
     #content.container {padding-left: 15px;padding-right: 15px;}
     .form-wrapper {width: 360px}
     #navbar .navbar-header {float: left; height: auto}
