--- a/billing/templates/billing/momo_checkout.html
+++ b/billing/templates/billing/momo_checkout.html
@@ -36,6 +36,7 @@
 
 {% block content %}
     <div id="content" class="container">
+        <div class="visible-xs" style="float: left; width: 100%; padding: 15px 0"></div>
         <div style="font-size: 13px">
             <a href="{{ request.META.HTTP_REFERER }}" class="pull-left">{% trans "Cancel" %}</a>
             <span class="text-primary pull-right">{{ user.full_name }}</span>
@@ -43,7 +44,7 @@
         </div>
         <div id="checkout">
             <div style="margin-bottom: 45px">
-                <span class="pull-left" style="width: 60%">
+                <span class="pull-left" style="width: 50%">
                     <img src="{{ settings.IKWEN_MEDIA_URL }}{{ payment_mean.logo.name }}" alt="{{ payment_mean.name }}" class="img-responsive" />
                 </span>
                 <span class="pull-right" style="color: #03A9F4">
