--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -218,8 +218,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 }
 @media (min-width: 768px) {
     .modal .actions {margin-top: 2em}
-    #content {padding: 80px 15px 0; min-height: 450px}
-    #content.container {padding-left: 15px;padding-right: 15px;}
+    #content {padding-top: 75px; min-height: 450px}
     .form-wrapper {width: 360px}
     #navbar .navbar-header {float: left; height: auto}
     .menu-button {cursor: pointer;padding: 21px 15px 0 0;}
