--- a/accesscontrol/templates/accesscontrol/community.html
+++ b/accesscontrol/templates/accesscontrol/community.html
@@ -50,12 +50,6 @@
                         <div role="presentation" class="tab group {{ sudo_group.name }}" data-id="{{ sudo_group.id }}" data-name="{{ sudo_group.name }}">
                             <a href="#{{ sudo_group.id }}" aria-controls="{{ sudo_group.id }}" role="tab" data-toggle="tab">{{ sudo_group.name }}</a>
                         </div>
-    {#                    <div role="presentation" class="tab group {{ sudo_group.name }}" data-id="{{ sudo_group.id }}" data-name="{{ sudo_group.name }}">#}
-    {#                        <a href="#{{ sudo_group.id }}" aria-controls="{{ sudo_group.id }}" role="tab" data-toggle="tab">{{ sudo_group.name }}</a>#}
-    {#                    </div>#}
-    {#                    <div role="presentation" class="tab group {{ sudo_group.name }}" data-id="{{ sudo_group.id }}" data-name="{{ sudo_group.name }}">#}
-    {#                        <a href="#{{ sudo_group.id }}" aria-controls="{{ sudo_group.id }}" role="tab" data-toggle="tab">{{ sudo_group.name }}</a>#}
-    {#                    </div>#}
                         <div role="presentation" class="tab group results" data-id="results" style="display: none">
                             <a href="#results" aria-controls="results" role="tab" data-toggle="tab">{% trans "Search: " %} <span></span></a>
                         </div>
@@ -117,7 +111,7 @@
                         </li>
                     </ul>
                 </div>
-                <div role="tabpanel" class="tab-pane" id="results">
+                <div role="tabpanel" class="tab-pane" id="results" data-min-search-chars="2">
                     {% include 'core/snippets/spinner.html' %}
                     <div class="empty" style="color: #888; font-size: 18px; padding: 30px 0">{% trans "No result" %}</div>
                     <ul class="people">
@@ -199,8 +193,8 @@
                     groupName = $(this).data('name'),
                     count = $('div#' + groupId + ' li.member:not(.tpl)').length;
                 $('div#group-update h5 em').text(groupName);
-                $('div.tab-pane').removeClass('active');
-                $('div#' + groupId).addClass('active');
+                $('div.tab-pane').removeClass('active').hide();
+                $('div#' + groupId).addClass('active').show();
                 if (count > 0 && $(window).width() >= 768) {
                     $('div#' + groupId + ' li.member.active').click();
                     return;
