--- a/core/templates/core/base_admin.html
+++ b/core/templates/core/base_admin.html
@@ -31,7 +31,7 @@
     {{ block.super }}
     <div id="app-nav" class="container-fluid">
         <span class="cta app-logo">
-            <img src="{{ settings.IKWEN_MEDIA_URL }}{{ service.app.logo.name }}" class="img-responsive" />
+            <img src="{{ settings.IKWEN_MEDIA_URL }}ikwen/app_logos/{{ service.app.slug }}-logo.png" class="img-responsive" />
         </span>
         <span class="cta app-name">{{ service.app.name }}</span>
         <ol class="breadcrumb">
