--- a/partnership/templates/partnership/cloud_setup/settings.html
+++ b/partnership/templates/partnership/cloud_setup/settings.html
@@ -1,228 +1,1 @@
-"""
-Django settings for Kakocase project.
-
-For more information on this file, see
-https://docs.djangoproject.com/en/1.6/topics/settings/
-
-For the full list of settings and their values, see
-https://docs.djangoproject.com/en/1.6/ref/settings/
-"""
-
-# Build paths inside the project like this: os.path.join(BASE_DIR, ...)
-import os
-BASE_DIR = os.path.dirname(os.path.dirname(__file__))
-
-
-# Quick-start development settings - unsuitable for production
-# See https://docs.djangoproject.com/en/1.6/howto/deployment/checklist/
-
-# SECURITY WARNING: keep the secret key used in production secret!
-SECRET_KEY = '{{ secret_key }}'
-
-# SECURITY WARNING: don't run with debug turned on in production!
-DEBUG = {{ debug }}
-TESTING = False  # True if running unit tests
-
-TEMPLATE_DEBUG = True
-
-ALLOWED_HOSTS = ['{{ allowed_hosts }}']
-
-
-# Application definition
-
-INSTALLED_APPS = (
-    'django.contrib.admin',
-    'django.contrib.auth',
-    'django.contrib.contenttypes',
-    'django.contrib.sessions',
-    'django.contrib.messages',
-    'django.contrib.staticfiles',
-    'django.contrib.webdesign',
-    'django.contrib.humanize',
-    'djangotoolbox',
-    'django_user_agents',
-
-    'ikwen.core',
-    'ikwen.cashout',
-    'ikwen.accesscontrol',
-    'ikwen.billing',
-    'ikwen.flatpages',
-    'ikwen.partnership',
-    'ikwen.theming',
-
-    'ikwen_kakocase.kakocase',
-    'ikwen_kakocase.kako',
-
-    'ikwen_shavida.shavida',
-    'ikwen_shavida.movies',
-)
-
-MIDDLEWARE_CLASSES = (
-    'django.contrib.sessions.middleware.SessionMiddleware',
-    'django.middleware.common.CommonMiddleware',
-    'django.middleware.csrf.CsrfViewMiddleware',
-    'django.contrib.auth.middleware.AuthenticationMiddleware',
-    'django.contrib.messages.middleware.MessageMiddleware',
-    'django.middleware.clickjacking.XFrameOptionsMiddleware',
-    'django_user_agents.middleware.UserAgentMiddleware',
-    'ikwen.core.middleware.ServiceStatusCheckMiddleware',
-    'ikwen.accesscontrol.middleware.XDomainTokenAuthMiddleware',
-)
-
-TEMPLATE_CONTEXT_PROCESSORS = (
-    "django.contrib.auth.context_processors.auth",
-    "django.core.context_processors.debug",
-    "django.core.context_processors.i18n",
-    "django.core.context_processors.media",
-    "django.core.context_processors.static",
-    "django.contrib.messages.context_processors.messages",
-    'django.core.context_processors.request',
-    'ikwen.core.context_processors.project_settings',
-
-)
-
-ROOT_URLCONF = 'ikwen.partnership.urls'
-
-WSGI_APPLICATION = 'conf.wsgi.application'
-
-if DEBUG or TESTING:
-    WALLETS_DB = {
-        'ENGINE': 'django.db.backends.sqlite3',
-        'NAME': '/home/komsihon/Dropbox/PycharmProjects/ikwen/db.sqlite3',
-    }
-else:
-    WALLETS_DB = {  # ikwen_kakocase.ikwen_kakocase relational database used to store sensitive objects among which CashOutRequest
-        'ENGINE': 'django.db.backends.mysql',
-        'NAME': '',
-        'USER': '',
-        'PASSWORD': 'admin'
-    }
-
-# Database
-# https://docs.djangoproject.com/en/1.6/ref/settings/#databases
-
-DATABASES = {
-    'default': {
-        'ENGINE': '', # Add 'postgresql_psycopg2', 'mysql', 'sqlite3' or 'oracle'.
-        'NAME': '{{ ikwen_name }}',
-    },
-    'umbrella': {
-        'ENGINE': '', # Add 'postgresql_psycopg2', 'mysql', 'sqlite3' or 'oracle'.
-        'NAME': '',
-    },
-    'wallets': WALLETS_DB
-}
-
-# Internationalization
-# https://docs.djangoproject.com/en/1.6/topics/i18n/
-
-LANGUAGE_CODE = 'en'
-
-TIME_ZONE = 'Africa/Douala'
-
-USE_I18N = True
-
-USE_L10N = True
-
-USE_TZ = False
-
-# Absolute filesystem path to the directory that will hold user-uploaded files.
-# Example: "/var/www/example.com/media/"
-MEDIA_ROOT = '{{ media_root }}'
-
-# URL that handles the media served from MEDIA_ROOT. Make sure to use a
-# trailing slash.
-# Examples: "http://example.com/media/", "http://media.example.com/"
-MEDIA_URL = '{{ media_url }}'
-
-# Absolute path to the directory static files should be collected to.
-# Don't put anything in this directory yourself; store your static files
-# in apps' "static/" subdirectories and in STATICFILES_DIRS.
-# Example: "/var/www/example.com/static/"
-STATIC_ROOT = '{{ static_root }}'
-
-
-# Static files (CSS, JavaScript, Images)
-# https://docs.djangoproject.com/en/1.6/howto/static-files/
-
-STATIC_URL = '{{ static_url }}'
-
-TEMPLATE_DIRS = (
-    os.path.join(BASE_DIR,  'templates'),
-    '/home/komsihon/Dropbox/PycharmProjects/ikwen/partnership/templates'
-)
-
-CACHES = {
-    'default': {
-        'BACKEND': 'django.core.cache.backends.memcached.MemcachedCache',
-        'LOCATION': '127.0.0.1:11211',
-        'TIMEOUT': 60 * 2,
-        'KEY_PREFIX': '{{ ikwen_name }}',  # Use rather svdprod for Production
-        'VERSION': '1'
-    }
-}
-
-
-#  *******       IKWEN CONFIGURATION       *******      #
-
-IKWEN_SERVICE_ID = '{{ service.id }}'
-
-PROJECT_URL = '{{ service.url }}'
-
-IKWEN_CONFIG_MODEL = 'partnership.PartnerProfile'
-IKWEN_CONFIG_MODEL_ADMIN = 'ikwen.partnership.admin.PartnerProfileAdmin'
-
-CASH_OUT_MIN = 5000
-
-# Function that renders customer detail in the Admin Panel.
-# Must return the HTML code that will be inserted above the Block/Activate button
-CUSTOMER_DETAIL_RENDERER = 'ikwen.accesscontrol.views.render_customer_detail'
-
-AUTH_USER_MODEL = 'accesscontrol.Member'
-
-AUTHENTICATION_BACKENDS = (
-    'permission_backend_nonrel.backends.NonrelPermissionBackend',
-    'ikwen.accesscontrol.backends.LocalDataStoreBackend',
-)
-
-LOGIN_URL = 'ikwen:sign_in'
-LOGIN_REDIRECT_URL = 'dashboard'
-LOGOUT_REDIRECT_URL = 'ikwen:sign_in'
-
-# STAFF_ROUTER describes how staff users are routed upon login.
-# It is a list of tuples each containing at least 2 elements,
-# the first being the permission, the second being
-# the url name, or raw url where to route if user having that permission
-# The third element if exists will be the passed as *args for the url
-# or **kwargs depending if it's a tuple or a dictionary
-# Note that the Superuser will always be routed to the first url
-# since he has all permissions
-#
-# Eg:
-# STAFF_ROUTER = (
-#     ('app_label.view_dashboard', 'app_label:dashboard'),
-#     ('app_label.manage_orders', 'app_label:order_list')
-# )
-STAFF_ROUTER = (
-    ('partnership.ik_view_dashboard', 'dashboard'),
-)
-
-IKWEN_BASE_URL = 'http://www.ikwen.com'  # Used only for dev purposes (DEBUG = False)
-
-WSGI_SCRIPT_ALIAS = ''  # Used only for dev purposes (DEBUG = False)
-
-
-#  *******       BILLING CONFIGURATION       *******  #
-BILLING_SUBSCRIPTION_MODEL = 'core.Service'
-BILLING_SUBSCRIPTION_MODEL_ADMIN = 'ikwen.core.admin.ServiceAdmin'
-BILLING_INVOICE_ITEM_MODEL = 'billing.IkwenInvoiceItem'
-SERVICE_SUSPENSION_ACTION = 'ikwen.billing.utils.suspend_subscription'
-
-
-#  *******       E-mail CONFIGURATION       *******  #
-
-EMAIL_HOST = ''
-EMAIL_HOST_USER = ''
-EMAIL_HOST_PASSWORD = ''
-EMAIL_PORT = 587
-EMAIL_USE_TLS = True
+# Clean
