autofocus added to username field

--- a/accesscontrol/templates/accesscontrol/register.html
+++ b/accesscontrol/templates/accesscontrol/register.html
@@ -65,7 +65,7 @@
                     <div class="form-group row username">
                         <label for="rg-username" class="col-sm-5 col-md-4">{% trans "Username or email" %}</label>
                         <div class="col-sm-6 col-md-6">
-                            <input id="rg-username" class="form-control input-sm username" type="text" name="username"/>
+                            <input id="rg-username" class="form-control input-sm username" type="text" name="username" autofocus />
                             {{ register_form.username.errors }}
                         </div>
                     </div>
