Bug fix: Update password button now working

--- a/accesscontrol/templates/accesscontrol/account.html
+++ b/accesscontrol/templates/accesscontrol/account.html
@@ -142,7 +142,7 @@
             <div class="col-md-6">
                 <section class="security">
                     <div class="update-result">
-                        <p class="message hidden"></p>
+                        <p class="message" style="display: none"></p>
                     </div>
                     <header>
                         <span> {% trans "Security" %} </span>
@@ -163,7 +163,7 @@
                         <div class="form-group"> <input type="password" name="password2" class="form-control input-sm" placeholder="{% trans 'Confirm new password' %}"> </div>
                         <div class="col-sm-5 col-md-5 row">
                             <div class="col-sm-5 col-md-5">
-                                <button data-field="email" class="btn btn-primary btn-sm btn-block"> OK </button>
+                                <button data-field="email" class="btn btn-primary btn-sm btn-block confirm"> OK </button>
                             </div>
                             <div class="col-sm-5 col-md-5">
                                 <button class="btn btn-default btn-sm btn-block">{% trans "Cancel" %}</button>
